@@ -10,6 +10,10 @@ are using them get loaded.
   Set the address that is used as the local host address for all the internal
   communication channels that require a sockets (local web server, etc.).
 
+* sweet.debug.printlocalhostaddressdetection
+  = true/false (default: false)
+  Set whether to print the steps of local host address detection.
+
 * sweet.debug.printlocalhostaddress
   = true/false (default: false)
   Set whether the address found as the local host address should be printed.
